--- a/data/mot17.yaml
+++ b/data/mot17.yaml
@@ -1,6 +1,6 @@
 train: ../dataset/MOT17/train.txt  # 118287 images
-val: ../dataset/MOT17/MOT17/val.txt  # 5000 images
-test: ../dataset/MOT17/MOT17/test.txt  # 20288 of 40670 images, submit to https://competitions.codalab.org/competitions/20794
+val: ../dataset/MOT17/val.txt  # 5000 images
+test: ../dataset/MOT17/test.txt  # 20288 of 40670 images, submit to https://competitions.codalab.org/competitions/20794
 
 # number of classes
 nc: 1
