update mot_visdrone dataset yaml

--- a/data/MOT_Visdrone.yaml
+++ b/data/MOT_Visdrone.yaml
@@ -1,13 +1,13 @@
-train: /home/ltt/data/dataset/MOT_VisDrone/train/images
-val: /home/ltt/data/dataset/MOT_VisDrone/valid/images
-test: /home/ltt/data/dataset/MOT_VisDrone/test/images
+train: /home/ltt/data/dataset/MOT_VisDrone/train.txt
+val: /home/ltt/data/dataset/MOT_VisDrone/valid.txt
+test: /home/ltt/data/dataset/MOT_VisDrone/test.txt
 
 nc: 1
 names: ['people']
 
-roboflow:
-  workspace: hechenghui97-hotmail-com
-  project: mot_visdrone_det_0.5
-  version: 1
-  license: CC BY 4.0
-  url: https://universe.roboflow.com/hechenghui97-hotmail-com/mot_visdrone_det_0.5/dataset/1
+# roboflow:
+#   workspace: hechenghui97-hotmail-com
+#   project: mot_visdrone_det_0.5
+#   version: 1
+#   license: CC BY 4.0
+#   url: https://universe.roboflow.com/hechenghui97-hotmail-com/mot_visdrone_det_0.5/dataset/1
