remove CA attention module

--- a/cfg/training/yolov7_CA.yaml
+++ b/cfg/training/yolov7_CA.yaml
@@ -30,8 +30,8 @@ backbone:
  
    [-1, 1, MP, []],
    [-1, 1, Conv, [128, 1, 1]],
-   [-3, 1, CA, [128]], # 增加 CA 模块
-  #  [-3, 1, Conv, [128, 1, 1]],
+  #  [-3, 1, CA, [128]], # 增加 CA 模块
+   [-3, 1, Conv, [128, 1, 1]],
    [-1, 1, Conv, [128, 3, 2]],
    [[-1, -3], 1, Concat, [1]],  # 16-P3/8
    [-1, 1, Conv, [128, 1, 1]],
